--- a/index.html
+++ b/index.html
@@ -10,16 +10,34 @@
     <header> 
         <nav>
             <a href="#">Home</a>
-            <a href="#">Produto</a>
+            <a href="#">Signos</a>
             <a href="#">more</a>
             <a href="#"><img src="imagens/saida.png" alt="Saida"></a>
         </nav>
     </header>
     <main>
-        conteudo 
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
+        <p>conteudo</p>
+        <div>
+            <img src="#" alt="Tudo">
+        </div>
+        <section>
+            <p>conteudo</p>
+            <div>
+                <img src="#" alt="1">
+                <span>Aries</span>
+                <img src="#" alt="2">
+                <img src="#" alt="3">
+                <img src="#" alt="4">
+                <img src="#" alt="5">
+                <img src="#" alt="6">
+                <img src="#" alt="7">
+                <img src="#" alt="8">
+                <img src="#" alt="9">
+                <img src="#" alt="10">
+                <img src="#" alt="11">
+                <img src="#" alt="12">
+            </div>
+        </section>
         <p>conteudo</p>
         <img src="#" alt="imagem">
         <p>conteudo</p>
