--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <img src="#" alt="1">
                 <span>Aries</span>
                 <img src="#" alt="2">
+                <span></span>
                 <img src="#" alt="3">
                 <img src="#" alt="4">
                 <img src="#" alt="5">
