Continuação da pag home
Falta ligar alguns links e adicionar as imagens.

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     <main class="container">  
         <!-- O container esta conectado com o menu, podemos criar os conteudos tranquilamente -->
         <div class="conteudo">
-            <section class="PadraoS">
+            <section class="PadraoS carrossel">
                 <!-- Sera um carrossel de imagens. mudar nome para Carrosel após ter as imagens -->
                 <div class="imagem">Imagem ficara aqui!</div>
             </section>
@@ -102,36 +102,74 @@
                 <div class="catpro">
                         <div class="ns">
                             <a href="#" class="grupo1">
-                                <img src="img/supermercado.jpg" alt="supermercado" class="teste">
+                                <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
                                 <p>Alimentos</p>
                             </a>
                         </div>
 
                         <div class="ns">
                             <a href="#" class="grupo1">
-                                <img src="img/supermercado.jpg" alt="supermercado" class="teste">
+                                <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
                                 <p>Bebidas</p>
                             </a>
                         </div>
 
                         <div class="ns">
                             <a href="#" class="grupo1">
-                                <img src="img/supermercado.jpg" alt="supermercado" class="teste">
+                                <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
                                 <p>Produtos de limpeza</p>
                             </a>
                         </div>
 
                         <div class="ns">
                             <a href="#" class="grupo1">
-                                <img src="img/supermercado.jpg" alt="supermercado" class="teste">
+                                <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
                                 <p>Hortifruti</p>
                             </a>
                         </div>
                 </div>
             </section>
-            <div class="PadraoS"></div>
+            <section class="PadraoS parceiros">
+                <h3 class="areaO">MARCAS PARCEIRAS</h3>
+                <div class="sparceiros">
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                    <div class="marca"></div>
+                </div>
+            </section>
         </div>
 
     </main>
+    <footer class="final">
+        <div class="conteudof container">
+            <section class="logolink ">
+                <a href="#"><img src="img/LogoPromoVale_pequena.webp" alt="Logo LogoPromoVale_pequena" class="logof"></a>
+            </section>
+            <section class="footers linkmenu">
+                <h4>Links rápidos</h4>
+                <a href="#" class="linksf">Categorias</a>
+                <a href="#" class="linksf">Cupons</a>
+                <a href="#" class="linksf">Sobre Nós</a>
+            </section>
+            <section class="footers linkcat">
+                <h4>Links Categorias</h4>
+                <a href="#" class="linksf">Alimentos</a>
+                <a href="#" class="linksf">Hortifruti</a>
+                <a href="#" class="linksf">Bebidas</a>
+                <a href="#" class="linksf">Produtos de limpeza</a>
+            </section>
+            <section class="footers contato">
+                <h4>Contatos</h4>
+                <a href="#" class="linksf">Promovale@gmail.com</a>
+                <a href="#" class="linksf">(12)98222-3333</a>
+            </section>
+        </div>
+    </footer>
 </body>
 </html>
