--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    
+    <title>Promovale</title>
+    <link rel="shortcut icon" href="img/LogoPromoVale_pequena.webp" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="inicio.css">
     <!-- <link rel="stylesheet" href="responsivo.css" media="screen and (max-width: 600px)">
