--- a/home.html
+++ b/home.html
@@ -13,13 +13,13 @@
     <header class="cabeca1">
         <nav class="menu container">
             <!-- Está conectado aqui -->
-            <div class="div">
-            <img src="img/LogoPromoVale_pequena.webp" alt="logo" class="logo">
-            </div>
+            <a href="#">
+                <img src="img/LogoPromoVale_pequena.webp" alt="logo" class="logo">
+            </a>
             <ul class="categorias">
-                <li class="opcoes">Categorias</li>
-                <li class="opcoes">Cupons</li>
-                <li class="opcoes">Sobre nós</li>
+                <li class="opcoes"><a href="#">Categorias</a></li>
+                <li class="opcoes"><a href="#">Cupons</a></li>
+                <li class="opcoes"><a href="#">Sobre nós</a></li>
             </ul>
             <div class="busca">
                 <span class="material-symbols-outlined">search</span>
