--- a/home.html
+++ b/home.html
@@ -31,7 +31,8 @@
         <div class="conteudo">
             <section class="PadraoS carrossel">
                 <!-- Sera um carrossel de imagens. mudar nome para Carrosel após ter as imagens -->
-                <div class="imagem">Imagem ficara aqui!</div>
+                <img src="img/Banner.webp" alt="Em-breve" class="banner">
+                <!-- <img src="img/Banner.webp" alt="Banner" class="imagem"> -->
             </section>
             <section class="PadraoS">
                 <h3 class="areaO">OFERTAS DO DIA</h3>
@@ -146,28 +147,28 @@
         </div>
 
     </main>
-    <footer class="final">
-        <div class="conteudof container">
+    <footer class="main-footer">
+        <div class="footer-content container">
             <section class="logolink ">
                 <a href="#"><img src="img/LogoPromoVale_pequena.webp" alt="Logo LogoPromoVale_pequena" class="logof"></a>
             </section>
-            <section class="footers linkmenu">
+            <section class="footer-section linkmenu">
                 <h4>Links rápidos</h4>
-                <a href="#" class="linksf">Categorias</a>
-                <a href="#" class="linksf">Cupons</a>
-                <a href="#" class="linksf">Sobre Nós</a>
+                <a href="#" class="footer-links">Categorias</a>
+                <a href="#" class="footer-links">Cupons</a>
+                <a href="#" class="footer-links">Sobre Nós</a>
             </section>
-            <section class="footers linkcat">
+            <section class="footer-section linkcat">
                 <h4>Links Categorias</h4>
-                <a href="#" class="linksf">Alimentos</a>
-                <a href="#" class="linksf">Hortifruti</a>
-                <a href="#" class="linksf">Bebidas</a>
-                <a href="#" class="linksf">Produtos de limpeza</a>
+                <a href="#" class="footer-links">Alimentos</a>
+                <a href="#" class="footer-links">Hortifruti</a>
+                <a href="#" class="footer-links">Bebidas</a>
+                <a href="#" class="footer-links">Produtos de limpeza</a>
             </section>
-            <section class="footers contato">
+            <section class="footer-section contato">
                 <h4>Contatos</h4>
-                <a href="#" class="linksf">Promovale@gmail.com</a>
-                <a href="#" class="linksf">(12)98222-3333</a>
+                <a href="#" class="footer-links">Promovale@gmail.com</a>
+                <a href="#" class="footer-links">(12)98222-3333</a>
             </section>
         </div>
     </footer>
