Alterando algumas coisas

--- a/home.html
+++ b/home.html
@@ -133,15 +133,15 @@
             <section class="PadraoS parceiros">
                 <h3 class="areaO">MARCAS PARCEIRAS</h3>
                 <div class="sparceiros">
-                    <div class="marca"></div>
-                    <div class="marca"></div>
-                    <div class="marca"></div>
-                    <div class="marca"></div>
-                    <div class="marca"></div>
-                    <div class="marca"></div>
-                    <div class="marca"></div>
-                    <div class="marca"></div>
-                    <div class="marca"></div>
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/carrefour (1).webp" alt="" class="marca">
                 </div>
             </section>
         </div>
