--- a/sobrenos.html
+++ b/sobrenos.html
@@ -31,7 +31,7 @@
         <section class="conteudo">
             <article class="sobre-main">
                 <div class="empresa">
-                    <h2 class="cor">Promovale</h2>
+                    <h2 class="cor titulo">Promovale</h2>
                     <p class="texto cor">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti possimus explicabo amet veniam consectetur nihil fuga tempore eveniet voluptatem recusandae.</p>
                     <div class="redes-sociais">
                         <img src="#" alt="insta">
@@ -40,10 +40,11 @@
                         <img src="#" alt="insta">
                     </div>
                 </div>
-                <img src="img/LogoPromoVale_pequena.webp" alt="nossa logo">
+                <img src="img/LogoPromoVale_pequena.webp" alt="nossa logo" class="promovale">
+                
             </article>
             <article class="marcas-parceiras">
-                <h3 class="cor">Redes Parceiras</h3>
+                <h3 class="cor texto-centro">Redes Parceiras</h3>
                 <div class="logos-p">
                     <img src="#" alt="logo1">
                     <img src="#" alt="logo2">
@@ -56,9 +57,9 @@
             </article>
             <article class="proposta">
                 <div class="pre-form">
-                    <h3 class="cor">Junte - se a Promovale</h3>
-                    <p class="cor">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, iure.</p>
-                    <a href="#" class="cor">Cadastrar - se</a>
+                    <h3 >Junte - se a Promovale</h3>
+                    <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, iure.</p>
+                    <a href="#" class=" botao">Cadastrar - se</a>
                 </div>
             </article>
 
