--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <ul class="categorias">
                 <li class="opcoes"><a href="#">Mercado</a></li>
                 <li class="opcoes"><a href="#">Cupons</a></li>
-                <li class="opcoes"><a href="#">Sobre nós</a></li>
+                <li class="opcoes"><a href="sobrenos.html">Sobre nós</a></li>
             </ul>
             <div class="busca">
                 <span class="material-symbols-outlined">search</span>
@@ -66,7 +66,7 @@
                             <a href="#" class="ofertaD">
 
                                 <div class="produto">
-                                    <img src="img/Chocolate.webp" alt="nescau" class="pro">
+                                    <img src="img/hortfruti/Alface Americana.webp" alt="nescau" class="pro">
                                     <p class="descricao">Chocolate ao leite diamante negro 80g</p>
                                     <p class="preco">R$6,99</p>
                                 </div>
@@ -76,7 +76,7 @@
                             <a href="#" class="ofertaD">
                                 
                                 <div class="produto">
-                                    <img src="img/Chocolate.webp" alt="nescau" class="pro">
+                                    <img src="img/hortfruti/alho-roxo 1.webp" alt="nescau" class="pro">
                                     <p class="descricao">Chocolate ao leite diamante negro 80g</p>
                                     <p class="preco">R$6,99</p>
                                 </div>
@@ -130,28 +130,28 @@
                         <div class="ns">
                             <a href="#" class="grupo1">
                                 <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
-                                <p>Mercearia</p>
+                                <p >Mercearia</p>
                             </a>
                         </div>
 
                         <div class="ns">
                             <a href="#" class="grupo1">
                                 <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
-                                <p>Bebidas</p>
+                                <p >Bebidas</p>
                             </a>
                         </div>
 
                         <div class="ns">
                             <a href="#" class="grupo1">
                                 <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
-                                <p>Produtos de limpeza</p>
+                                <p >Produtos de limpeza</p>
                             </a>
                         </div>
 
                         <div class="ns">
                             <a href="#" class="grupo1">
                                 <img src="img/supermercado.jpg" alt="supermercado" class="catimg">
-                                <p>Hortifruti</p>
+                                <p >Hortifruti</p>
                             </a>
                         </div>
                 </div>
@@ -160,15 +160,15 @@
             <section class="PadraoS parceiros">
                 <h3 class="areaO">REDES PARCEIRAS</h3>
                 <div class="sparceiros">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
-                    <img src="img/carrefour (1).webp" alt="" class="marca">
+                    <img src="img/70x56_carrefour.webp" alt="Logo carrefour" class="marca">
+                    <img src="img/80x80_logo Max.webp" alt="" class="marca">
+                    <img src="img/100x100_logo Tenda.webp" alt="" class="marca">
+                    <img src="img/100x100_semar-supermercados-logo.webp" alt="" class="marca">
+                    <img src="img/100x21_Extra_logo.webp" alt="" class="marca">
+                    <img src="img/100x28_atacadao-logo.webp" alt="" class="marca">
+                    <img src="img/100x28_logo Nagumo.webp" alt="" class="marca">
+                    <img src="img/100X65_logo roldao.webp" alt="" class="marca">
+                    <img src="img/100x75_Logo Shibata.webp" alt="" class="marca">
                 </div>
             </section>
         </div>
@@ -198,6 +198,7 @@
                 <a href="#" class="footer-links">(12)98222-3333</a>
             </section>
         </div>
+        
     </footer>
     <script src="interacoes.js"></script>
 </body>
