--- a/sobrenos.html
+++ b/sobrenos.html
@@ -13,8 +13,8 @@
     <header class="cabeca1">
         <nav class="menu container">
             <!-- Está conectado aqui -->
-            <a href="#">
-                <img src="img/LogoPromoVale_pequena.webp" alt="logo" class="logo">
+            <a href="home.html">
+                <img src="img/redes-sociais/LogoPromoVale_350x350.webp" alt="logo" class="logo">
             </a>
             <ul class="categorias">
                 <li class="opcoes"><a href="#">Mercado</a></li>
@@ -31,45 +31,46 @@
         <section class="conteudo">
             <article class="sobre-main">
                 <div class="empresa">
-                    <h2 class="cor titulo">Promovale</h2>
-                    <p class="texto cor">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti possimus explicabo amet veniam consectetur nihil fuga tempore eveniet voluptatem recusandae.</p>
+                    <h2 class="titulo">Nossa História</h2>
+                    <p class="texto ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti possimus explicabo amet veniam consectetur nihil fuga tempore eveniet voluptatem recusandae.</p>
                     <div class="redes-sociais">
-                        <img src="#" alt="insta">
-                        <img src="#" alt="insta">
-                        <img src="#" alt="insta">
-                        <img src="#" alt="insta">
+                        <img src="img/redes-sociais/facebook40x40.webp" alt="insta">
+                        <img src="img/redes-sociais/instagram40x40.webp" alt="insta">
+                        <img src="img/redes-sociais/tiktok40x40.webp" alt="insta">
+                        <img src="img/redes-sociais/linkedin40x40.webp" alt="insta">
                     </div>
                 </div>
-                <img src="img/LogoPromoVale_pequena.webp" alt="nossa logo" class="promovale">
-                
-            </article>
-            <article class="marcas-parceiras">
-                <h3 class="cor texto-centro">Redes Parceiras</h3>
-                <div class="logos-p">
-                    <img src="#" alt="logo1">
-                    <img src="#" alt="logo2">
-                    <img src="#" alt="logo3">
-                    <img src="#" alt="logo4">
-                    <img src="#" alt="logo5">
-                    <img src="#" alt="logo6">
-                    <img src="#" alt="logo7">
-                </div>
-            </article>
-            <article class="proposta">
-                <div class="pre-form">
-                    <h3 >Junte - se a Promovale</h3>
-                    <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, iure.</p>
-                    <a href="#" class=" botao">Cadastrar - se</a>
-                </div>
-            </article>
+                <img src="img/redes-sociais/LogoPromoVale_350x350.webp" alt="nossa logo" class="promovale">
 
         </section>
-
+        
     </main>
+</article>
+<article class="marcas-parceiras">
+    <h2 class=" texto-centro titulo">Redes Parceiras</h2>
+    <div class="logos-p">
+        <img src="img/70x56_carrefour.webp" alt="Logo carrefour" class="marca">
+        <img src="img/80x80_logo Max.webp" alt="" class="marca">
+        <img src="img/100x100_logo Tenda.webp" alt="" class="marca">
+        <img src="img/100x100_semar-supermercados-logo.webp" alt="" class="marca">
+        <img src="img/100x21_Extra_logo.webp" alt="" class="marca">
+        <img src="img/100x28_atacadao-logo.webp" alt="" class="marca">
+        <img src="img/100x28_logo Nagumo.webp" alt="" class="marca">
+        <img src="img/100X65_logo roldao.webp" alt="" class="marca">
+        <img src="img/100x75_Logo Shibata.webp" alt="" class="marca">
+    </div>
+</article>
+    <article class="proposta">
+        <div class="pre-form">
+            <h2 class="titulo">Junte - se a nós</h2>
+            <p >Quer anunciar as ofertas do seu mercado na PromoVale? Entre em contato conosco e alcance milhares de consumidores do Vale do Paraíba.</p>
+            <a href="#" class=" botao">Cadastrar - se</a>
+        </div>
+    </article>
     <footer class="main-footer">
         <div class="footer-content container">
             <section class="logolink ">
-                <a href="#"><img src="img/LogoPromoVale_pequena.webp" alt="Logo LogoPromoVale_pequena" class="logof"></a>
+                <a href="home.html"><img src="img/LogoPromoVale_pequena.webp" alt="Logo LogoPromoVale_pequena" class="logof"></a>
             </section>
             <section class="footer-section linkmenu">
                 <h4>Links rápidos</h4>
