Atualizando as paginas

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="img/LogoPromoVale_pequena.webp" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilopags/sobrenos.css">
-    <!-- <link rel="stylesheet" href="responsivo.css" media="screen and (max-width: 600px)">
-</head> -->
+    <!-- <link rel="stylesheet" href="responsivo.css" media="screen and (max-width: 600px)"> -->
+</head> 
 <body>
     <header class="cabeca1">
         <nav class="menu container">
@@ -32,7 +32,13 @@
             <article class="sobre-main">
                 <div class="empresa">
                     <h2 class="titulo">Nossa História</h2>
-                    <p class="texto ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti possimus explicabo amet veniam consectetur nihil fuga tempore eveniet voluptatem recusandae.</p>
+                    <p class="texto ">Em meio à correria do dia a dia, percebemos o quanto era difícil encontrar as melhores ofertas sem precisar visitar mercado por mercado ou receber inúmeras mensagens confusas de promoções. Foi assim que nasceu o nosso projeto — com a vontade de facilitar a vida das pessoas na hora de economizar.
+
+                    Criado por Talita, Lucas e Maria Eduarda, nosso site surgiu de uma simples conversa entre amigos que compartilhavam o mesmo desafio: como reunir todas as promoções de supermercados e mercadinhos de bairro em um só lugar, de forma prática e organizada?
+                        
+                    Com muito carinho, dedicação e a vontade de fazer a diferença, desenvolvemos uma plataforma que reúne as melhores ofertas, atualizadas constantemente, para que você economize tempo e dinheiro sem abrir mão da qualidade.
+                    <br>
+                    <br>Aqui, a sua economia é a nossa missão. Seja bem-vindo!</p>
                     <div class="redes-sociais">
                         <img src="img/redes-sociais/facebook40x40.webp" alt="insta">
                         <img src="img/redes-sociais/instagram40x40.webp" alt="insta">
