--- a/home.html
+++ b/home.html
@@ -5,26 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promovale</title>
     <link rel="shortcut icon" href="img/LogoPromoVale_pequena.webp" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilopags/inicio.css">
     <!-- <link rel="stylesheet" href="responsivo.css" media="screen and (max-width: 600px)">-->
 </head> 
-<body>
-    <header class="cabeca1">
-        <nav class="menu container">
-            <!-- Está conectado aqui -->
-            <a href="home.html">
-                <img src="img/LogoPromoVale_pequena.webp" alt="logo" class="logo">
-            </a>
-            <ul class="categorias">
-                <li class="opcoes"><a href="#">Mercado</a></li>
-                <li class="opcoes"><a href="#">Cupons</a></li>
-                <li class="opcoes"><a href="sobrenos.html">Sobre nós</a></li>
-            </ul>
-            <div class="busca">
+<body onresize=" mudoutamanho()">
+    <header class="menu "> 
+        <nav class="nav-bar container">
+            <div class="container-logo">
+                <a href="#"><img src="img/LogoPromoVale_pequena.webp" alt="logo" class="logo"></a>
+            </div>
+            <div class="nav-list">
+                <ul>
+                    <li class="nav-links"><a href="#">Mercado</a></li>
+                    <li class="nav-links"><a href="#">Cupons</a></li>
+                    <li class="nav-links"><a href="#">Sobre nós</a></li>
+                </ul>
+            </div>
+            <div class="buscar">
                 <span class="material-symbols-outlined">search</span>
             </div>
+            <div class="hamburguer hb-funcoes">
+                <span class="material-symbols-outlined" onclick="menushow()">menu</span>
+            </div>
         </nav>
+        <div class="nav-list-segunda open">
+            <ul>
+                <li class="nav-links"><a href="#">Mercado</a></li>
+                <li class="nav-links"><a href="#">Cupons</a></li>
+                <li class="nav-links"><a href="#">Sobre nós</a></li>
+            </ul>
+            <div class="buscar-segunda">
+                <span class="material-symbols-outlined">search</span>
+            </div>
+        </div>
     </header>
     <main class="container">  
         <!-- O container esta conectado com o menu, podemos criar os conteudos tranquilamente -->
