--- a/home.html
+++ b/home.html
@@ -202,7 +202,7 @@
             </section>
             <section class="footer-section contato">
                 <h4>Contatos</h4>
-                <a href="#" class="footer-links">Promovale@gmail.com</a>
+                <a href="#" class="footer-links gmail">Promovale@gmail.com</a>
                 <a href="#" class="footer-links">(12)98222-3333</a>
             </section>
         </div>
